--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-s-alert": "^1.4.1",
     "react-scripts": "4.0.1",
     "react-social-login-buttons": "^3.1.2",
+    "react-tabs": "^3.2.0",
     "redux": "^4.0.5",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
