--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-hook-async": "^2.1.2",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-s-alert": "^1.4.1",
