--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@hookform/resolvers": "^1.3.5",
     "@pdftron/webviewer": "^7.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -18,11 +19,15 @@
     "node-sass": "^4.14.1",
     "query-string": "^6.14.0",
     "react": "^17.0.1",
+    "react-audio-player": "^0.14.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-h5-audio-player": "^3.6.1",
     "react-hook-async": "^2.1.2",
+    "react-hook-form": "^6.15.4",
+    "react-input-slider": "^6.0.0",
     "react-paypal-express-checkout": "^1.0.5",
     "react-pdf": "^5.2.0",
     "react-redux": "^7.2.2",
@@ -32,7 +37,7 @@
     "react-tabs": "^3.2.0",
     "redux": "^4.0.5",
     "web-vitals": "^0.2.4",
-    "yup": "^0.32.8"
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
