--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
         "node_modules{,/**}",
         ".vscode{,/**}"
     ],
-    "appService.defaultWebAppToDeploy": "/subscriptions/9260fe11-03eb-4c50-a79f-5567f5a395c7/resourceGroups/API/providers/Microsoft.Web/sites/MyE-Library",
-    "appService.deploySubpath": "."
+    "appService.deploySubpath": ".",
+    "appService.defaultWebAppToDeploy": "/subscriptions/9260fe11-03eb-4c50-a79f-5567f5a395c7/resourceGroups/API/providers/Microsoft.Web/sites/MyELibrary"
 }
